ServiceWorker: Refer to the current provider in ServiceWorkerRegistration

Currently |m_provider| is kept at the constructor in ServiceWorkerRegistration.
Once the provider is removed (e.g. the registration is belong to an iframe and
iframe.remove() is called), the registration would refer the invalid
|m_provider|. This patch removes |m_provider| and gets a corresponding provider
via SWContainerClient.
Additionally, reject is changed to rejectWithDOMException to reject immediately.
This change enables us to get DOMException on the parent frame used to own the
reclaimed iframe. A test is also added for tracking the exception.

BUG=603817
TEST=./third_party/WebKit/Tools/Scripts/run-webkit-tests -t Default http/tests/serviceworker/chromium/unregister-on-detached-iframe.html

Review URL: https://codereview.chromium.org/1893363003

Cr-Commit-Position: refs/heads/master@{#389700}

Former-commit-id: e0281ef6c52c10a3baf7e0a043c944ab14c9a712